# dotfiles

./: .XCompose  .bash_extras  .bashrc  .emacs  .gitconfig  .gitignore  .hlint.yaml  .profile  .sops.yaml  .spacemacs  .stalonetrayrc  .xmobarrc  .xsessionrc  Makefile.haskell  README.md  README.org  check-symlinks.sh  conemu.xml  configuration.nix  deploy.nu  flake.nix  fourmolu.yaml  shell.nix  spacemacs-keys.md  switch.nu  test.sh  xorg.conf
.config/alacritty/: alacritty.yml
.config/fish/: config.fish
.config/kitty/: kitty.conf
.config/nvim/: .netrwhist  coc-settings.json  init.vim
.emacs.d/: purescript-unicode-input-method.el
.xmonad/: get-backlight.sh  get-mic.sh  get-volume.sh  xmonad.errors  xmonad.hi  xmonad.hs
Code/User/: addons.md  settings.json
config/: 272D83521C488CCD-2024-11-09.asc  9B61460007838C21-2025-08-28.asc  XCompose  agenda.el  firenvim.json  gh_dark_transparent.toml  init.el  rofi-rounded-common.rasi  tridactyl  tridactyl.json  xmobarrc  xmobarrc-laptop
config/carbon/: xmobarrc
config/eww/: eww.scss  eww.yuck
config/fish/: config.fish  fish_variables  fishd.x1  fishfile
config/kitty/: kitty.conf
config/kmonad/: moonlander.kbd
config/nvim/: .netrwhist  bindings.lua  coc-settings.json  config.lua  init.vim  nix-init.vim  plugins.lua
config/ranger/: rc.conf
config/swaync/: config.json  configSchema.json  play-calendar-notify.sh  style.css
config/xmonad/: .hlint.yaml  .stylish-haskell.yaml  README.md  default.nix  get-mails.sh  hie.yaml  package.yaml  shell.nix  xmonad-cvlad.cabal  xmonad-evie.cabal  xmonad-x86_64-linux  xmonad.errors  xmonad.hi  xmonad.hs
config/xmonad/app/: Main.hs
config/xmonad/html/: index.html
config/xmonad/nix/: default.nix  sources.json
config/xmonad/src/: Lib.hs
dev-shell/haskell/: default.nix  shell.nix
haskell/: template.hsfiles
home/: ghci  reddup-macos.yaml  reddup-vm.yaml  reddup.yml
home-manager/: #init.el#  common.nix  emacs.nix  email.nix  home.nix  init.el  reddup.yml
home-manager/aiode/: home.nix
lib/: default.nix  nuShellScript.nix  theme.nix
nix/: configuration.nix  sources.json
nvim/: coc-settings.json  init.vim
patches/: waybar-sort-workspaces-by-output.patch
scripts/: active-window-parse.awk  crypto.nu  misc.nu  toggle-tv.sh  tv-status.nu
scripts/dotfiles-script/: dotfiles-script.cabal
scripts/dotfiles-script/exe/: Main.hs
system/: common.nix  system-gnome.nix
unused/: .bash_extras  .emacs  .gitconfig  .gitignore  .profile  .spacemacs  .xsessionrc
(+463 files in other folders)
