cabal-version: 2.2

name:           xmonad-evie
version:        0.1.0.0
author:         Evie Ciobanu
license:        Unlicense
build-type:     Simple
extra-source-files:
    README.md

executable xmonad-evie
  main-is: xmonad.hs
  other-modules:
      Paths_xmonad_evie
  ghc-options: -Weverything -Wno-missing-home-modules -Wno-redundant-constraints -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-unsafe -Wno-safe -Wno-monomorphism-restriction -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , xmonad
    , xmonad-contrib
    , filepath
  default-language: Haskell2010
